# FirstGrade

compile_emulate/: compile.cpp  errors.cpp  processor.cpp
compile_emulate/include/: compile.h  errors.h  processor.h  stack.h  tables.h
lirs/: CMakeLists.txt  main.c
lirs/hm/: hashmap.c  hashmap.h  hashmap_test.c  hashmap_test.h
lirs/lirs/: lirs.c  lirs.h  lirs_tests.c  lirs_tests.h
lirs/queue/: queue.c  queue.h  queue_test.c  queue_test.h
mipt_contests/other/: ef.c  mk.c  pof.c
mipt_contests/other/hwh/: hashmap.c  hashmap.h  input  main.c  text.txt
mipt_contests/sem1/: ee.c  fd.c  fm.c  hwf.c  mf.c  ns.c  pp.c  rl.c  sf.c
mipt_contests/sem2/: cc.c  ft.c  gf.c  hwe.c  lm.c  pe.c  pn.c  ps.c
mipt_contests/sem3/: asb.c  me.c  mp.c  mpk.c  ms.c  msb.c  scb.c  sce.c  si.c  sse.c
mipt_contests/sem4/: bp.c  ed.c  hwk.c  mc.c  sa.c  sp.c  su.c
mipt_contests/sem5/: al.c  cl.c  hl.c  hl2.c  is.c  lr.c  rg.c  tt.c  xc.c
onegin/: main.c  out  sort_text.c  sort_text.h  text
square/: a.out  solve_square.c
stack/: log.txt  main.cpp  stack.cpp  stack.h  stack.txt
